--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "cellv2-blog-temp",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A temporary blog",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Cellv2",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/Cellv2/cellv2-blog-temp/issues"
   },
   "dependencies": {
     "gatsby": "^2.24.50",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "prettier": "2.1.0"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://github.com/Cellv2/cellv2-blog-temp#readme",
   "keywords": [
     "gatsby"
   ],
@@ -46,7 +46,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/Cellv2/cellv2-blog-temp.git"
   },
   "scripts": {
     "build": "gatsby build",
